# monitorflow

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  page.tsx
components/: ram-usage.tsx  sidebar.tsx
migrations/: 0000_init.sql
pages/: analytics.js  servers.js  test.js
pages/api/: api_receive.js  metrics.js
prisma/: schema.prisma
prisma/migrations/20240207093658_initial_migration/: migration.sql
prisma/migrations/20240207141015_change_big_int_to_string/: migration.sql
prisma/migrations/20240207151433_components_bytes/: migration.sql
src/: main.rs
