[package]
name = "monitorflow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tokio"] }
hyper    = { version = "1.6.0", features = ["full"] }
tokio     = { version = "1.47.1",   features = ["full"] }
sqlx        = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
chrono    = { version = "0.4", features = ["serde"] }
dotenv    = "0.15"
serde     = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }

